# Qt_demo

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  mainwindow.ui  vcpkg.json
